--- a/start.html
+++ b/start.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <p>These are files I uploaded for peeps</p>
-    <p><a href="http://codark.com">My Wevsite</a></p>
+    <p><a href="http://codark.com">My Website</a></p>
     <p>FOR DANPANDA03GAMING</p>
     <video src="robloxAlignment.mp4" width="100%" height="100%" alt="Could not find 404">BROWSER NOT SUPPORTED</video>
   </body>
