--- a/start.html
+++ b/start.html
@@ -3,6 +3,6 @@
     <p>These are files I uploaded for peeps</p>
     <p><a href="http://codark.com">My Website</a></p>
     <p>FOR DANPANDA03GAMING</p>
-    <video src="robloxAlignment.mp4" width="100%" height="100%" type="video/mp4" alt="Could not find 404">BROWSER NOT SUPPORTED</video>
+    <video src="robloxAlignment.mp4" width="100%" height="100%" type="video/mp4" alt="Could not find 404" controls>BROWSER NOT SUPPORTED</video>
   </body>
 </html>
