--- a/start.html
+++ b/start.html
@@ -6,6 +6,6 @@
     <p>EXPIRED 4/9/17</p>
     <br /><br />
     <p>FOR THEGAMINGANTHONY13</p>
-    <video src="robloxDuping.mp4" width="100%" height="100%">BROWSER NOT SUPPORTED</video>
+    <video src="robloxDuping.mp4" width="100%" height="100%" controls>BROWSER NOT SUPPORTED</video>
     </body>
 </html>
