--- a/start.html
+++ b/start.html
@@ -1,11 +1,22 @@
 <html>
   <body>
+    <script>
+         var v = prompt('Download Code Please.');
+          if (v.toLowerCase() == '3ct6w') {
+            document.getElementById.style = '';
+            alert('Download For Isaiah M. Opened. Thank You!');
+          }
+    </script>
     <p>These are files I uploaded for peeps</p>
     <p><a href="http://codark.com">My Website</a></p>
+    <p>FOR ISAIAH M.</p>
+    <div id="complete" style="visibility: hidden;"><a href="Fire (Water Remix).mp3" download>Click To Download</a></div>
+    <audio type="audio/mpeg"><source src="Fire (Water Remix).mp3" type="audio/mpeg"></audio>
+    
     <p>FOR DANPANDA03GAMING</p>
     <p>EXPIRED 4/9/17</p>
     <br /><br />
     <p>FOR THEGAMINGANTHONY13</p>
-    <video src="robloxDuping.mp4" width="100%" height="100%" controls>BROWSER NOT SUPPORTED</video>
+    <p>EXPIRED 8/12/17</p>
     </body>
 </html>
