--- a/start.html
+++ b/start.html
@@ -4,7 +4,7 @@
     <p><a href="http://codark.com">My Website</a></p>
     <p>FOR ISAIAH M.</p>
     <div id="complete" style="visibility: hidden;"><a href="Fire (Water Remix).mp3" download>Click To Download</a></div>
-    <audio type="audio/mpeg"><source src="Fire (Water Remix).mp3" type="audio/mpeg"></audio>
+    <audio type="audio/mpeg" controls><source src="Fire (Water Remix).mp3" type="audio/mpeg"></audio>
     
     <p>FOR DANPANDA03GAMING</p>
     <p>EXPIRED 4/9/17</p>
