--- a/start.html
+++ b/start.html
@@ -15,7 +15,7 @@
     <script>
          var v = prompt('Download Code Please.');
           if (v.toLowerCase() == '3ct6w') {
-            location = 'linksystem.codark.com/#visit#uploads.codark.com#download-3ct6w';
+            location = 'http://linksystem.codark.com/#visit#uploads.codark.com#download-3ct6w';
        document.getElementById('complete').style = ''; 
             alert('Download For Isaiah M. Opened. Thank You!');
           }
