--- a/start.html
+++ b/start.html
@@ -13,14 +13,15 @@
     <p>EXPIRED 8/12/17</p>
     </body>
     <script>
+      var loc = loc.split('#');
+      if (location == 'https://darkheart527.github.io/uploads/start.html') {
          var v = prompt('Download Code Please.');
-          if (v.toLowerCase() == '3ct6w') {
+      }
+          if (v == '3ct6w') {
             location = 'http://linksystem.codark.com/#visit#uploads.codark.com#download-3ct6w';
        document.getElementById('complete').style = ''; 
             alert('Download For Isaiah M. Opened. Thank You!');
           }
-      var loc = location;
-      var loc = loc.split('#');
       if (loc[1] == 'download-3ct6w') {
        document.getElementById('complete').style = ''; 
       }
