--- a/start.html
+++ b/start.html
@@ -13,17 +13,10 @@
     <p>EXPIRED 8/12/17</p>
     </body>
     <script>
-      var loc = loc.split('#');
-      if (location == 'https://darkheart527.github.io/uploads/start.html') {
          var v = prompt('Download Code Please.');
-      }
           if (v == '3ct6w') {
-            location = 'http://linksystem.codark.com/#visit#uploads.codark.com#download-3ct6w';
-       document.getElementById('complete').style = ''; 
             alert('Download For Isaiah M. Opened. Thank You!');
+            location = 'download-3ct6w.html';
           }
-      if (loc[1] == 'download-3ct6w') {
-       document.getElementById('complete').style = ''; 
-      }
     </script>
 </html>
