--- a/start.html
+++ b/start.html
@@ -2,21 +2,8 @@
   <body>
     <p>These are files I uploaded for peeps</p>
     <p><a href="http://codark.com">My Website</a></p>
-    <p>FOR ISAIAH M.</p>
-    <div id="complete" style="visibility: hidden;"><a href="Fire (Water Remix).mp3" download>Click To Download</a></div>
-    <audio type="audio/mpeg" controls><source src="Fire (Water Remix).mp3" type="audio/mpeg"></audio>
-    
-    <p>FOR DANPANDA03GAMING</p>
-    <p>EXPIRED 4/9/17</p>
-    <br /><br />
-    <p>FOR THEGAMINGANTHONY13</p>
-    <p>EXPIRED 8/12/17</p>
+    <p><a href="CSSGrids.pdf">Download</a> CSS Grid PDF</p>
     </body>
     <script>
-         var v = prompt('Download Code Please.');
-          if (v == '3ct6w') {
-            alert('Download For Isaiah M. Opened. Thank You!');
-            location = 'download-3ct6w.html';
-          }
     </script>
 </html>
